<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
 >

    <Button
        android:id="@+id/buttonlogon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordtext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:text="@string/logon_button" />

    <Button
        android:id="@+id/buttonsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonlogon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/signup_button" />

    <EditText
        android:id="@+id/usernametext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/username_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordtext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernametext"
        android:layout_below="@+id/usernametext"
        android:layout_marginTop="24dip"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />
    
</RelativeLayout >
