<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ncirl.project.giggidymobileapp.parse.logon.SignUpActivity" >

    <EditText
        android:id="@+id/suUsernameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:hint="@string/username_hint"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/suPasswordTxt"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/suUsernameTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:hint="@string/password_hint"
        android:ems="10" />

    <EditText
        android:id="@+id/suConfirmPasswordTxt"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/suPasswordTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:hint="@string/confirm_password_hint"
        android:ems="10" />

    <EditText
        android:id="@+id/suEmailTxt"
        android:inputType="textEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/suConfirmPasswordTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:hint="@string/email_hint"
        android:ems="10" />

    <Button
        android:id="@+id/suSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/suEmailTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/submit_button" />
    
</RelativeLayout>
