<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ncirl.project.giggidymobileapp.facebook.HomeActivity" >

    <Button
        android:id="@+id/gigListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="179dp"
        android:text="@string/gig_list_button" />

    <Button
        android:id="@+id/plannerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gigListButton"
        android:layout_centerHorizontal="true"
        android:text="@string/planner_button" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/plannerButton"
        android:layout_below="@+id/plannerButton"
        android:layout_marginTop="58dp"
        android:text="@string/log_out_button" />

    <Button
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plannerButton"
        android:layout_centerHorizontal="true"
        android:text="@string/user_profile_button" />

    <TextView
        android:id="@+id/headerPlaceHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="Home Screen"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>